<resources>
    <string name="app_name">Packify</string>
    <string name="label_active_orders">Aktiva ordrar</string>
    <string name="label_order_history">Orderhistorik</string>
    <string name="label_specific_order">Orderspecifikation</string>
    <string name="label_order_handler">Orderhantering</string>
    <string name="label_settings">Inställningar</string>
    <string name="label_user_handler">Användarhantering</string>
    <string name="label_login">Inloggning</string>
    <string name="label_main_activity">Packify</string>
    <string name="settings_seekbar_label">Antal visade ordrar:</string>
    <string name="settings_seekbar_display_orders">0</string>
    <string name="settings_number_label">Telefonnummer:</string>
    <string name="input_order_number">Ordernummer:</string>
    <string name="input_customer_id">Kundnummer:</string>
    <string name="input_order_sum">Ordersumma:</string>
    <string name="input_order_address">Adress:</string>
    <string name="input_user_name">Namn:</string>
    <string name="input_user_password">Lösenord:</string>
    <string name="input_user_phone">Telefonnummer:</string>
    <string name="input_password">Lösenord:</string>
    <string name="input_user_id">Användar-ID:</string>
    <string name="input_order_post_address">Postadress:</string>
    <string name="input_customer_name">Kundnamn:</string>
    <string name="input_new_user_name">Användarnamn:</string>
    <string name="input_new_user_id">Användar-ID:</string>
    <string name="input_new_user_password">Lösenord:</string>
    <string name="input_new_user_phonenumber">Telefonnummer:</string>
    <string name="input_new_order_nr">Ordernummer:</string>
    <string name="input_new_customer_nr">Kundnummer:</string>
    <string name="input_new_order_sum">Ordersumma:</string>
    <string name="input_new_order_address">Adress:</string>
    <string name="input_new_postaddress">Postadress:</string>
    <string name="btn_submit">Spara</string>
    <string name="btn_delete">Radera</string>
    <string name="btn_login_submit">Logga in</string>
    <string name="btn_deliver_order">Levererad</string>
    <string name="btn_open_map">Vägbeskrivning</string>
    <string name="btn_edit_order">Spara order</string>
    <string name="btn_save_signature_button">Spara signatur</string>
    <string name="btn_add_new_user">Lägg till användare</string>
    <string name="btn_cancel">Avbryt</string>
    <string name="btn_add_new_order">Lägg till</string>
    <string name="btn_add_order">Lägg till order</string>
    <string name="btn_save_settings">Spara</string>
    <string name="btn_logout">Logga ut</string>
    <string name="btn_new_user_add">Lägg till</string>
    <string name="order_number">Ordernummer:</string>
    <string name="customer_id">Kundnummer:</string>
    <string name="customer_name">Kundnamn:</string>
    <string name="order_sum">Ordersumma:</string>
    <string name="address">Adress:</string>
    <string name="post_address">Postadress:</string>
    <string name="delivery_date">Levererad:</string>
    <string name="delivered_by">Levererad av:</string>
    <string name="received_by">Mottagen av:</string>
    <string name="please_sign_below"><u>Signera nedan, tack!</u></string>
    <string name="active_orders_empty">Det finns inga aktiva ordrar.</string>
    <string name="order_history_empty">Det finns inga levererade ordrar.</string>
    <string name="drawer_open">Öppna sidomeny</string>
    <string name="drawer_close">Stäng sidomeny</string>
    <string name="menu_settings">Inställningar</string>
    <string name="menu_admin_userhandler">Användarhantering</string>
    <string name="menu_admin_orderhandler">Orderhantering</string>
    <string name="menu_orderhistory">Orderhistorik</string>
    <string name="menu_activeorders">Aktiva ordrar</string>
    <string name="new_user_add">Lägg till ny användare:</string>
    <string name="new_user_name">Användarnamn:</string>
    <string name="new_user_id">Användar-ID:</string>
    <string name="new_user_password">Lösenord:</string>
    <string name="new_user_phonenumber">Telefonnummer</string>
    <string name="new_user_is_admin">Admin</string>
    <string name="new_user_add_button">Lägg till</string>
    <string name="new_user_cancel_button">Avbryt</string>
    <string name="order_delivered_switch">Levererad</string>
    <string name="save_signature_button">Spara signatur</string>
    <string name="signature_cancel_button">Avbryt</string>
    <string name="main_activity_label">Packify</string>
    <string name="menu_update_order">Uppdatera</string>
    <string name="spinner_choose_user">Välj en användare...</string>
    <string name="switch_is_admin">Admin</string>
    <string name="switch_is_delivered">Levererad</string>
    <string name="toast_active_orders_one">levererad order togs bort</string>
    <string name="toast_active_orders_several">levererade ordrar togs bort</string>
    <string name="toast_login_password">Felaktigt lösenord, försök igen</string>
    <string name="toast_login_username">Felaktigt användarnamn, försök igen</string>
    <string name="toast_neworder_saved"> Order sparad</string>
    <string name="toast_neworder_orderno">Ordernumret finns redan</string>
    <string name="toast_newuser_saved">Användare tillagd</string>
    <string name="toast_newuser_userid">Användar-ID finns redan</string>
    <string name="toast_orderhandler_updated">Order uppdaterad</string>
    <string name="toast_orderhandler_orderno">Fyll i ordernummer</string>
    <string name="toast_orderhandler_deleted">Order raderad</string>
    <string name="toast_settings_saved">Inställningar sparade</string>
    <string name="toast_signature_saved">Signatur sparad!</string>
    <string name="toast_signature_wrong">Ett fel har inträffat, försök igen</string>
    <string name="toast_specificorder_phoneno">Fyll i ett telefonnummer i inställningar</string>
    <string name="toast_userhandler_admin_change">Otillåtet att ändra denna användare</string>
    <string name="toast_userhandler_updated">Användaruppgifter uppdaterade</string>
    <string name="toast_userhandler_user">Välj en användare</string>
    <string name="toast_userhandler_admin_delete">Otillåtet att radera denna användare</string>
    <string name="toast_userhandler_deleted">raderad</string>
</resources>
