<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_user_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/new_user_add" />

        <EditText
            android:id="@+id/input_new_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_new_user_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/input_new_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_new_user_id"
            android:inputType="number" />

        <EditText
            android:id="@+id/input_new_user_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_new_user_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/input_new_user_phonenr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_new_user_phonenumber"
            android:inputType="phone" />

        <Switch
            android:id="@+id/is_new_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_gravity="end"
            android:text="@string/switch_is_admin" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_new_user_btn"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:onClick="addNewUser"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp"
            android:text="@string/btn_new_user_add"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_style"/>

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:onClick="cancelBtn"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_style"/>
    </LinearLayout>
</LinearLayout>