<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_order_handler"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_outer_margin"
    android:paddingLeft="@dimen/activity_horizontal_outer_margin"
    android:paddingRight="@dimen/activity_horizontal_outer_margin"
    android:paddingTop="@dimen/activity_vertical_outer_margin"
    tools:context="com.scottcrocker.packify.OrderHandlerActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <LinearLayout
            android:id="@+id/layout_register_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                android:text="@string/register_order" />

            <EditText
                android:id="@+id/input_order_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/input_order_number"
                android:inputType="number"
                android:maxLength="9"
                android:paddingBottom="5dp" />

            <EditText
                android:id="@+id/input_customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/input_customer_name"
                android:inputType="text"
                android:paddingBottom="5dp" />

            <EditText
                android:id="@+id/input_customer_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/input_customer_id"
                android:inputType="number"
                android:maxLength="9"
                android:paddingBottom="5dp" />

            <EditText
                android:id="@+id/input_order_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/input_order_sum"
                android:inputType="number"
                android:maxLength="9"
                android:paddingBottom="5dp" />

            <EditText
                android:id="@+id/input_order_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/input_order_address"
                android:inputType="text"
                android:paddingBottom="5dp" />

            <EditText
                android:id="@+id/input_order_post_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/input_order_post_address"
                android:inputType="text"
                android:paddingBottom="5dp" />

            <Switch
                android:id="@+id/is_delivered_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/order_delivered_switch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_edit_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="editOrder"
                android:text="@string/btn_edit_order" />

            <Button
                android:id="@+id/btn_submit_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="addOrder"
                android:text="@string/btn_submit_order" />

            <Button
                android:id="@+id/btn_delete_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="deleteOrder"
                android:text="@string/btn_delete_order" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
