<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signature"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:orientation="vertical"
    tools:context="com.scottcrocker.packify.SignatureActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/please_sign_below" />
    <com.scottcrocker.packify.helper.DrawingView
        android:id="@+id/signature_drawingview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
        <!--android:layout_marginBottom="3dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:background="#FFFFFFFF"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/save_signature_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_signature_button"
            android:onClick="saveSignature"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_style"/>
        <Button
            android:id="@+id/signature_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signature_cancel_button"
            android:onClick="cancelSignature"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_style"/>
    </LinearLayout>
</LinearLayout>
