<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_outer_margin"
    android:paddingLeft="@dimen/activity_horizontal_outer_margin"
    android:paddingRight="@dimen/activity_horizontal_outer_margin"
    android:paddingTop="@dimen/activity_vertical_outer_margin"
    tools:context="com.scottcrocker.packify.LoginActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/input_login_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/input_user_id"
            android:inputType="number" />

        <EditText
            android:id="@+id/input_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/input_login_id"
            android:layout_alignStart="@+id/input_login_id"
            android:layout_below="@+id/input_login_id"
            android:ems="10"
            android:hint="@string/input_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_login_password"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_style"
            android:onClick="loginValidation"
            android:text="@string/btn_login_submit"
            android:textColor="@color/colorAccent"/>
    </RelativeLayout>
</LinearLayout>
